Ajout d'une classe satellite avec test dans le main

--- a/hashcode-satellites/Resolution/Resolution.vcxproj
+++ b/hashcode-satellites/Resolution/Resolution.vcxproj
@@ -146,6 +146,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Satellite.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Satellite.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
