--- a/hashcode-satellites/Resolution/Resolution.vcxproj
+++ b/hashcode-satellites/Resolution/Resolution.vcxproj
@@ -147,10 +147,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ArgumentInvalideException.hpp" />
+    <ClInclude Include="Collection.hpp" />
     <ClInclude Include="Satellite.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArgumentInvalideException.cpp" />
+    <ClCompile Include="Collection.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Satellite.cpp" />
   </ItemGroup>
