--- a/hashcode-satellites/Resolution/Resolution.vcxproj.filters
+++ b/hashcode-satellites/Resolution/Resolution.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="ArgumentInvalideException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Collection.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Satellite.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ArgumentInvalideException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Collection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
