--- a/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj
+++ b/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj
@@ -146,6 +146,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Arbitre.h" />
+    <ClInclude Include="Collection.h" />
+    <ClInclude Include="Image.h" />
+    <ClInclude Include="Parser.h" />
+    <ClInclude Include="Satellite.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
