--- a/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj
+++ b/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj
@@ -148,9 +148,12 @@
   <ItemGroup>
     <ClInclude Include="Arbitre.h" />
     <ClInclude Include="Collection.h" />
-    <ClInclude Include="Image.h" />
+    <ClInclude Include="PicTaken.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="Satellite.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Parser.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
