--- a/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj.filters
+++ b/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="Satellite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Image.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Collection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -30,5 +27,13 @@
     <ClInclude Include="Arbitre.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PicTaken.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
