--- a/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj
+++ b/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj
@@ -150,10 +150,12 @@
     <ClInclude Include="Collection.h" />
     <ClInclude Include="PicTaken.h" />
     <ClInclude Include="Parser.h" />
-    <ClInclude Include="Satellite.h" />
+    <ClInclude Include="SatelliteArbitre.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Arbitre.cpp" />
     <ClCompile Include="Parser.cpp" />
+    <ClCompile Include="SatelliteArbitre.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
