--- a/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj.filters
+++ b/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClCompile Include="SatelliteArbitre.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PicTaken.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
