--- a/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj
+++ b/hashcode-satellites/Arbitre-mesures/Arbitre-mesures.vcxproj
@@ -147,15 +147,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Arbitre.h" />
-    <ClInclude Include="Collection.h" />
+    <ClInclude Include="ArgumentInvalideException.hpp" />
+    <ClInclude Include="Collection.hpp" />
+    <ClInclude Include="PicIn.hpp" />
     <ClInclude Include="PicTaken.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="SatelliteArbitre.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Arbitre.cpp" />
+    <ClCompile Include="ArgumentInvalideException.cpp" />
+    <ClCompile Include="Collection.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Parser.cpp" />
+    <ClCompile Include="PicIn.cpp" />
     <ClCompile Include="PicTaken.cpp" />
     <ClCompile Include="SatelliteArbitre.cpp" />
   </ItemGroup>
